# AutosarE2E

./: .gitignore  CMakeLists.txt  README.md  all.sh  build.sh  crc.cpp  crc.hpp  e2e.cpp  e2e.hpp  main.cpp
tests/: CMakeLists.txt  test_crc.cpp  test_e2e.cpp
